# xmirror

./: .gitignore  Cargo.toml  mirrors.json
api/: Cargo.toml
api/src/: api.rs  legacy.rs  main.rs  web.rs
cli/: Cargo.toml
cli/src/: main.rs
